syntax = "proto3";

package logging.v1;

option java_package = "com.authplatform.usersvc.proto.logging.v1";
option java_outer_classname = "LoggingProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

service LoggingService {
    rpc IngestLog(IngestLogRequest) returns (IngestLogResponse);
    rpc IngestLogBatch(IngestLogBatchRequest) returns (IngestLogBatchResponse);
}

message LogEntryMessage {
    string id = 1;
    google.protobuf.Timestamp timestamp = 2;
    string correlation_id = 3;
    string service_id = 4;
    LogLevel level = 5;
    string message = 6;
    optional string trace_id = 7;
    optional string span_id = 8;
    optional string user_id = 9;
    optional string request_id = 10;
    optional string method = 11;
    optional string path = 12;
    optional int32 status_code = 13;
    optional int64 duration_ms = 14;
    map<string, string> metadata = 15;
}

enum LogLevel {
    LOG_LEVEL_UNSPECIFIED = 0;
    LOG_LEVEL_DEBUG = 1;
    LOG_LEVEL_INFO = 2;
    LOG_LEVEL_WARN = 3;
    LOG_LEVEL_ERROR = 4;
    LOG_LEVEL_FATAL = 5;
    LOG_LEVEL_SECURITY = 6;
    LOG_LEVEL_AUDIT = 7;
}

message IngestLogRequest {
    LogEntryMessage entry = 1;
}

message IngestLogResponse {
    bool success = 1;
    string id = 2;
}

message IngestLogBatchRequest {
    repeated LogEntryMessage entries = 1;
}

message IngestLogBatchResponse {
    int32 accepted_count = 1;
    int32 rejected_count = 2;
}
